# gl_demo

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
